css front banner fix on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3934,6 +3934,7 @@ body.is-menu-visible #menu {
   #banner {
     padding: 7em 3em 5em 3em;
     height: auto;
+    height: 100vh;
     min-height: 0;
   }
 
